# ode-biomarker-project

./: .gitignore  AN_LanODEPipe.ipynb  AN_SHAPPipeline.ipynb  AN_SYPipelineScriptCopy.ipynb  DataFunctions.py  DataLink.py  DataLoader.py  PathLoader.py  README.md  SCRIPT_LanODEPipe.py  SCRIPT_MRMRPipe.py  SCRIPT_SHAPPipeline.py  SCRIPT_SYPipelineScriptCopy.py  SYPipelineScript.py  SYPipelineScriptAnalysis.ipynb  SYPipelineScriptTest.py  SYPipelineScriptTestAnalysis.ipynb  TorchApp.py  UTIL_create-dynamic-features.py  UTIL_create-initial-conditions.py  UTIL_gen-create-condition.py  UpdateRequirements.py  Visualisation.py  after-confirmation-1.ipynb  benchmark_gffs.py  benchmark_gffs.sh  benchmark_models.py  benchmark_models.sh  benchmark_network.py  benchmark_network.sh  benchmark_network_gene_subsets_memory_optimized.py  benchmark_network_gene_subsets_memory_optimized.sh  benchmark_network_v2.py  benchmark_network_v2.sh  benchmark_notebook.ipynb  benchmark_rnaseq_dynamic_models.py  benchmark_rnaseq_dynamic_models.sh  benchmark_rnaseq_dynamic_models_memory_optimized.py  benchmark_rnaseq_dynamic_models_memory_optimized.sh  benchmark_svr.py  (+58 more)
.devcontainer/: devcontainer.json
MATLAB-ODE/: create-initial-conditions.py
data/: MCF7_Top50_PS.xlsx  ccle_sample_info.pkl  data_exploration-v1.ipynb  data_exploration.ipynb  export_ECC_Base.xml  features_asghar_2022.xlsx  fgfr4_model_ccle_reference.csv
docs/: README.md  architecture.md  module-reference.md  onboarding.md  quick-start.md  research-workflows.md
dynmarker/: DataLoader.py  EvaluationPipeline.py  FeatureSelection.py  (+1 more)
(+129 files in other folders)
